# course_work_2

./: .env_templete  .flake8  .gitignore  README.md  pyproject.toml  user_settings.json
data/: operations.xlsx
src/: main.py  reports.py  services.py  utils.py  views.py
tests/: test_reports.py  test_services.py  test_utils.py  test_views.py
